# ConfigurableGA

./: .cproject  .project  CMakeLists.txt  README.md  main.cpp
algorithm/fea/: opoea.h  opofea.cpp  opofea.h
algorithm/ga/instance/: fastGA.h  oneLLEA.h
algorithm/ga/src/: geneticAlgorithm.h
algorithm/rs/: randomsearch.cpp
algorithm/sa/: sa.cpp  sa.h  sars.cpp
configurableGA/: main.cpp
configurableGA.xcodeproj/: project.pbxproj
configurableGA.xcodeproj/xcuserdata/fye.xcuserdatad/xcschemes/: xcschememanagement.plist
instance/: RLS.cpp  RLS.h  ea.cpp  ea.h  fastGA.cpp  fastGA.h  oneLLEA.cpp  twoRateEA.h
run/: main.cpp  run_in_parallel.py  w_model_LeadingOnes_suite.hpp  w_model_OneMax_suite.hpp
run/wmodelsuite/: w_model_OneMax_suite.hpp
src/: estimationOfDistribution.cpp  estimationOfDistribution.h  geneticAlgorithm.cpp  geneticAlgorithm.h  ghc.cpp  ghc.h  localSearches.cpp  localSearches.h  opoea.cpp  opoea.h  opofea.cpp  opofea.h  sa.cpp  sa.h  sars.h
